gcc/tree-vect-patterns.c
@@ -312,6 +312,9 @@ vect_recog_dot_prod_pattern (vec<gimple *> *stmts, tree *type_in,
     {
       gimple *def_stmt;
 
+      if (STMT_VINFO_DEF_TYPE (stmt_vinfo) != vect_reduction_def
+	  && ! STMT_VINFO_GROUP_FIRST_ELEMENT (stmt_vinfo))
+	return NULL;
       oprnd0 = gimple_assign_rhs1 (last_stmt);
       oprnd1 = gimple_assign_rhs2 (last_stmt);
       if (!types_compatible_p (TREE_TYPE (oprnd0), type)
@@ -531,6 +534,9 @@ vect_recog_sad_pattern (vec<gimple *> *stmts, tree *type_in,
     {
       gimple *def_stmt;
 
+      if (STMT_VINFO_DEF_TYPE (stmt_vinfo) != vect_reduction_def
+	  && ! STMT_VINFO_GROUP_FIRST_ELEMENT (stmt_vinfo))
+	return NULL;
       plus_oprnd0 = gimple_assign_rhs1 (last_stmt);
       plus_oprnd1 = gimple_assign_rhs2 (last_stmt);
       if (!types_compatible_p (TREE_TYPE (plus_oprnd0), sum_type)
@@ -1150,6 +1156,10 @@ vect_recog_widen_sum_pattern (vec<gimple *> *stmts, tree *type_in,
      of the above pattern.  */
 
   if (gimple_assign_rhs_code (last_stmt) != PLUS_EXPR)
+    return NULL;
+
+  if (STMT_VINFO_DEF_TYPE (stmt_vinfo) != vect_reduction_def
+      && ! STMT_VINFO_GROUP_FIRST_ELEMENT (stmt_vinfo))
     return NULL;
 
   oprnd0 = gimple_assign_rhs1 (last_stmt);
